# DanTheAutomator

./: .gitignore  CMakeLists.txt  README.md  build-ios.sh  build-win.bat  build.sh  install.sh  installer-win.nsi  package-mac.sh  package-win.ps1
.claude/: settings.local.json
Source/: EnvelopeData.h  EnvelopeEditorComponent.cpp  EnvelopeEditorComponent.h  EnvelopePlayer.cpp  EnvelopePlayer.h  Icons.h  KeyMapperComponent.cpp  KeyMapperComponent.h  MidiOutputComponent.cpp  MidiOutputComponent.h  MonokaiLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScopeComponent.cpp  ScopeComponent.h
